tests/ui/async-await/in-trait/dyn-compatibility.stderr
error[E0038]: the trait `Foo` is not dyn compatible
  --> $DIR/dyn-compatibility.rs:9:17
   |
LL |     let x: &dyn Foo = todo!();
   |                 ^^^ `Foo` is not dyn compatible
   |
note: for a trait to be dyn compatible it needs to allow building a vtable
      for more information, visit <https://doc.rust-lang.org/reference/items/traits.html#dyn-compatibility>
  --> $DIR/dyn-compatibility.rs:5:14
   |
LL | trait Foo {
   |       --- this trait is not dyn compatible...
LL |     async fn foo(&self);
   |              ^^^ ...because method `foo` is `async`
   = help: consider moving `foo` to another trait

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0038`.
