tests/ui/async-await/in-trait/dyn-compatibility.rs
//@ edition:2021


trait Foo {
    async fn foo(&self);
}

fn main() {
    let x: &dyn Foo = todo!();
    //~^ ERROR the trait `Foo` is not dyn compatible
}
